--- a/src/components/Header/global.css
+++ b/src/components/Header/global.css
@@ -32,13 +32,25 @@
   align-items: center;
 }
 
+.header__collumn--left {
+  margin-right: 60px;
+}
+
 .header__collumn--center {
   max-width: 700px;
   width: 100%;
 }
 
 .header__collumn--right {
+  flex-direction: row;
+  max-width: 430px;
+  width: 100%;
+  justify-content: flex-end;
   gap: 40px;
+}
+
+.header__collumn--right.desktop {
+  display: flex;
 }
 
 .header__collumn--right button {
@@ -48,12 +60,22 @@
   background-color: transparent;
 }
 
+.header__mobile-logo {
+  margin-left: 15px;
+}
+
 button.minicart {
   margin-left: 8px;
-  cursor: pointer;
   border: 1px solid #faa500;
   border-radius: 8px;
   padding: 15px 17px;
+}
+
+.header__desktop {
+  display: flex !important;
+}
+.header__mobile {
+  display: none !important;
 }
 
 /* navbar desk */
@@ -80,4 +102,26 @@ button.minicart {
   font-size: 14px;
   color: #353535;
   text-decoration: none;
+}
+
+/* navbar mobile */
+
+.header__collumn.mobile {
+  gap: 31px;
+}
+
+.header__mobile-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  width: 31px;
+}
+
+@media screen and (max-width: 1024px) {
+  .header__desktop {
+    display: none !important;
+  }
+  .header__mobile {
+    display: flex !important;
+  }
 }
