--- a/src/Styles/Home/global.css
+++ b/src/Styles/Home/global.css
@@ -31,3 +31,9 @@
   max-width: 1600px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 1024px) {
+  .tipbar {
+    padding-left: 31px;
+  }
+}
