--- a/src/components/Footer/global.css
+++ b/src/components/Footer/global.css
@@ -4,10 +4,10 @@
 
 .footer__container {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   max-width: 950px;
   margin: 0 auto;
+  flex-direction: row;
 }
 
 .footer__menu {
@@ -43,4 +43,19 @@
   gap: 22px;
   align-items: center;
   flex-direction: row;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer__container,
+  .footer__row-2--container {
+    flex-direction: column;
+  }
+
+  .footer__row-2--container {
+    gap: 32px;
+  }
+
+  .footer__column--icons {
+    justify-content: center;
+  }
 }
