--- a/src/components/Shelf/global.css
+++ b/src/components/Shelf/global.css
@@ -63,10 +63,11 @@
 .addToCart__button {
   background: #faa500;
   border: none;
-  cursor: pointer;
   width: 100%;
   border-radius: 4px;
   padding: 5px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .addToCart__button span {
