--- a/src/components/Modal/global.css
+++ b/src/components/Modal/global.css
@@ -5,16 +5,23 @@
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
+.dialog__section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .dialog__content {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 298px;
-  max-width: 450px;
-
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  width: 100%;
+  max-width: 850px;
+  /* width: 298px; */
+  /* max-width: 450px; */
 }
 
 .dialog__close-container {
@@ -34,6 +41,8 @@
 }
 
 .dialog__form {
+  max-width: 425px;
+  width: 100%;
   background-color: white;
   border-radius: 6px;
   box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
@@ -42,7 +51,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   padding: 40px 20px 24px;
 }
 
@@ -130,5 +138,14 @@
   to {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .dialog__form {
+    border-radius: 0;
+  }
+
+  .dialog__description {
+    font-size: 20px;
   }
 }
