--- a/src/Styles/Home/global.css
+++ b/src/Styles/Home/global.css
@@ -32,8 +32,8 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   .tipbar {
     padding-left: 31px;
   }
-}
+} */
